--- a/network_monitor_app/requirements.txt
+++ b/network_monitor_app/requirements.txt
@@ -16,3 +16,27 @@ python-dateutil==2.9.0.post0
 six==1.16.0
 tk==0.1.0
 tkmacosx==1.0.5
+certifi==2024.8.30
+charset-normalizer==3.3.2
+colour==0.1.5
+contourpy==1.3.0
+cycler==0.12.1
+fonttools==4.53.1
+idna==3.8
+kiwisolver==1.4.7
+matplotlib==3.9.2
+numpy==2.1.1
+packaging==24.1
+pillow==10.4.0
+psutil==6.0.0
+pyparsing==3.1.4
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.14
+PyQt5_sip==12.15.0
+python-dateutil==2.9.0.post0
+requests==2.32.3
+scapy==2.5.0
+six==1.16.0
+tk==0.1.0
+tkmacosx==1.0.5
+urllib3==2.2.2
