--- a/network_monitor_app/requirements.txt
+++ b/network_monitor_app/requirements.txt
@@ -7,9 +7,11 @@ fonttools==4.53.1
 idna==3.8
 kiwisolver==1.4.7
 matplotlib==3.9.2
+monitoring==0.9.12
 numpy==2.1.1
 packaging==24.1
 pillow==10.4.0
+prometheus_client==0.20.0
 psutil==6.0.0
 pyparsing==3.1.4
 PyQt5==5.15.11
